# tree-sitter-nominalscript

./: Cargo.toml  LICENSE  README.md  binding.gyp  package.json  pnpm-lock.yaml
bindings/node/: binding.cc  index.d.ts  index.js  nominalscript.d.ts  nominalscript.js
bindings/rust/: build.rs  lib.rs
common/: define-grammar.js  scanner.h
common/corpus/: expressions.txt
common/corpus/nominalscript/: declarations.txt
nominalscript/: Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter-nominalscript.wasm
nominalscript/bindings/node/: binding.cc  index.js
nominalscript/bindings/rust/: lib.rs
nominalscript/queries/: highlights.scm  indents.scm  tags.scm
nominalscript/queries/semantic/: decls.scm  program_to_extract_nominal_type.scm
nominalscript/src/: grammar.json  node-types.json  scanner.c
queries/: tags.scm
script/: check-generated-files
typescript/src/: node-types.json
