[package]
name = "tree-sitter-nominalscript"
description = "Nomimalscript grammar for the tree-sitter parsing library"
version = "0.20.2"
authors = ["Jakobeha <jakobeha@fastmail.com>", "Max Brunsfeld <maxbrunsfeld@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "nominalscript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-nominalscript"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "common",
  "bindings/rust",
  "nominalscript/grammar.js",
  "nominalscript/src",
  "queries"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
